- doc/resource.txt: Updated to include info about GRD. (RFB)

2012-07-02
- aes/.cvsignore: Added missing gem_rsc.c gem_rsc.h. (VRI)
- bios/screen.c: Refactored rez_changeable(). (VRI)
- bios/screen.c: Refactored get_monitor_type(). (VRI)
- bios/screen.c: Refactored initial_vram_size(). (VRI)

2012-07-03
- bios/screen.c bios/videl.c bios/videl.h: Refactored check_moderez(). (VRI)
- bios/lineainit.c bios/screen.c bios/screen.h bios/videl.c bios/videl.h:
  Added screen_get_current_mode_info(). (VRI)
- bios/screen.c: Refactored vram_size(). (VRI)
- aes/gemaplib.c aes/gemfmalt.c aes/geminit.c aes/gemrslib.c aes/gemsuper.c:
  Remove obsolete code only generated when USE_GEM_RSC is #defined. (RFB)
- aes/geminit.c: Code cleanup: remove previously-disabled code. (RFB)

2012-07-04
- aes/gem.def aes/gem.rsc: Removed unused free strings from resource. (RFB)

2012-07-05
- aes/gem.def aes/gem.rsc: Changed alerts to conform to standard TOS
  alert line length. (RFB)
- aes/crysbind.h aes/gemsuper.c desk/gembind.h: Removed non-Atari AES
  functions XGRF_xxx. (RFB)
- aes/gem.rsc aes/gemsuper.c: Display function number for unsupported
  AES calls. (RFB)
- doc/bugs.txt doc/status.txt doc/todo.txt: Miscellaneous documentation
  updates. (RFB)
- bios/startup.S: Added Amiga ROM size marker. (VRI)
- aes/gemfmlib.c aes/geminit.c aes/gemlib.h aes/gemrslib.c: Made two
  strings local rather than global. (RFB)
- vdi/vdi_text.c: Code cleanup: save space & simplify. (RFB)
- doc/status.txt: Updated status of VDI calls and AES calls. (RFB)

2012-07-06
- aes/crysbind.h aes/gemsuper.c: Differentiate between TOS and PC-GEM AES
  functions with the same opcode. (RFB)

2012-07-07
- aes/gemsuper.c: Fixed crysbind() warning about control signedness. (VRI)
- tools/mkrom.c: Added Amiga ROM checksum fixup. (VRI)
- bios/processor.S: Changed 68060 detection for buggy WinUAE. (VRI)
- .cvsignore, Makefile, doc/readme-amiga.txt: Renamed the Amiga ROM to
  emutos-amiga.rom. (VRI)