@@ -19,3 +19,4 @@ fal_dsm.txt
 *.exe
 *.s19
 *.stc
+*.adf
